--- a/College_rank_predictor.ipynb
+++ b/College_rank_predictor.ipynb
@@ -61,82 +61,82 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>IR-E-U-0139</td>\n",
-       "      <td>Indian Institute of Technology Gandhinagar</td>\n",
-       "      <td>83.76</td>\n",
-       "      <td>34.55</td>\n",
-       "      <td>55.15</td>\n",
-       "      <td>57.90</td>\n",
-       "      <td>38.26</td>\n",
-       "      <td>Gandhinagar</td>\n",
+       "      <th>52</th>\n",
+       "      <td>IR-E-U-0395</td>\n",
+       "      <td>Indian Institute of Technology Jodhpur</td>\n",
+       "      <td>67.71</td>\n",
+       "      <td>26.19</td>\n",
+       "      <td>56.17</td>\n",
+       "      <td>59.29</td>\n",
+       "      <td>8.05</td>\n",
+       "      <td>Jodhpur</td>\n",
+       "      <td>Rajasthan</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192</th>\n",
+       "      <td>IR-E-U-0129</td>\n",
+       "      <td>Dharmsinh Desai University</td>\n",
+       "      <td>49.40</td>\n",
+       "      <td>2.29</td>\n",
+       "      <td>59.12</td>\n",
+       "      <td>36.87</td>\n",
+       "      <td>2.69</td>\n",
+       "      <td>Nadiad</td>\n",
        "      <td>Gujarat</td>\n",
-       "      <td>24</td>\n",
+       "      <td>193</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>117</th>\n",
-       "      <td>IR-E-U-0043</td>\n",
-       "      <td>Vignan s Foundation for Science  Technology   ...</td>\n",
-       "      <td>59.21</td>\n",
-       "      <td>8.03</td>\n",
-       "      <td>49.36</td>\n",
-       "      <td>57.20</td>\n",
-       "      <td>5.21</td>\n",
-       "      <td>Guntur</td>\n",
-       "      <td>Andhra Pradesh</td>\n",
-       "      <td>118</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>177</th>\n",
-       "      <td>IR-E-C-9462</td>\n",
-       "      <td>School of Engineering  Cochin University of Sc...</td>\n",
-       "      <td>50.08</td>\n",
-       "      <td>14.19</td>\n",
-       "      <td>38.55</td>\n",
-       "      <td>44.77</td>\n",
-       "      <td>5.69</td>\n",
-       "      <td>Cochin</td>\n",
-       "      <td>Kerala</td>\n",
-       "      <td>178</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>111</th>\n",
-       "      <td>IR-E-U-0190</td>\n",
-       "      <td>Shoolini University of Biotechnology and Manag...</td>\n",
-       "      <td>53.75</td>\n",
-       "      <td>22.22</td>\n",
-       "      <td>46.02</td>\n",
-       "      <td>47.26</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>Solan</td>\n",
-       "      <td>Himachal Pradesh</td>\n",
-       "      <td>112</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>IR-E-C-35417</td>\n",
-       "      <td>Bharati Vidyapeeth Deemed University College o...</td>\n",
-       "      <td>54.62</td>\n",
-       "      <td>3.35</td>\n",
-       "      <td>65.40</td>\n",
-       "      <td>66.06</td>\n",
-       "      <td>6.18</td>\n",
-       "      <td>Pune</td>\n",
+       "      <th>26</th>\n",
+       "      <td>IR-E-U-0334</td>\n",
+       "      <td>Visvesvaraya National Institute of Technology</td>\n",
+       "      <td>67.70</td>\n",
+       "      <td>45.19</td>\n",
+       "      <td>69.73</td>\n",
+       "      <td>53.77</td>\n",
+       "      <td>15.56</td>\n",
+       "      <td>Nagpur</td>\n",
        "      <td>Maharashtra</td>\n",
-       "      <td>99</td>\n",
+       "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>110</th>\n",
-       "      <td>IR-E-U-0130</td>\n",
-       "      <td>Dhirubhai Ambani Institute of Information and ...</td>\n",
-       "      <td>47.25</td>\n",
-       "      <td>10.86</td>\n",
-       "      <td>68.33</td>\n",
-       "      <td>49.81</td>\n",
-       "      <td>7.12</td>\n",
-       "      <td>Gandhinagar</td>\n",
-       "      <td>Gujarat</td>\n",
-       "      <td>111</td>\n",
+       "      <th>96</th>\n",
+       "      <td>IR-E-C-18154</td>\n",
+       "      <td>University College of Engineering</td>\n",
+       "      <td>58.25</td>\n",
+       "      <td>10.41</td>\n",
+       "      <td>59.54</td>\n",
+       "      <td>50.97</td>\n",
+       "      <td>1.63</td>\n",
+       "      <td>Kakinada</td>\n",
+       "      <td>Andhra Pradesh</td>\n",
+       "      <td>97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>IR-E-C-1262</td>\n",
+       "      <td>B M S  College of Engineering</td>\n",
+       "      <td>62.07</td>\n",
+       "      <td>11.92</td>\n",
+       "      <td>55.53</td>\n",
+       "      <td>52.58</td>\n",
+       "      <td>17.79</td>\n",
+       "      <td>Bengaluru</td>\n",
+       "      <td>Karnataka</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181</th>\n",
+       "      <td>IR-E-U-0455</td>\n",
+       "      <td>Indian Institute of Information Technology  De...</td>\n",
+       "      <td>35.51</td>\n",
+       "      <td>7.80</td>\n",
+       "      <td>57.62</td>\n",
+       "      <td>53.05</td>\n",
+       "      <td>18.15</td>\n",
+       "      <td>Chennai</td>\n",
+       "      <td>Tamil Nadu</td>\n",
+       "      <td>182</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -144,20 +144,20 @@
       ],
       "text/plain": [
        "     institute_id                                               name    tlr  \\\n",
-       "23    IR-E-U-0139         Indian Institute of Technology Gandhinagar  83.76   \n",
-       "117   IR-E-U-0043  Vignan s Foundation for Science  Technology   ...  59.21   \n",
-       "177   IR-E-C-9462  School of Engineering  Cochin University of Sc...  50.08   \n",
-       "111   IR-E-U-0190  Shoolini University of Biotechnology and Manag...  53.75   \n",
-       "98   IR-E-C-35417  Bharati Vidyapeeth Deemed University College o...  54.62   \n",
-       "110   IR-E-U-0130  Dhirubhai Ambani Institute of Information and ...  47.25   \n",
+       "52    IR-E-U-0395             Indian Institute of Technology Jodhpur  67.71   \n",
+       "192   IR-E-U-0129                         Dharmsinh Desai University  49.40   \n",
+       "26    IR-E-U-0334      Visvesvaraya National Institute of Technology  67.70   \n",
+       "96   IR-E-C-18154                  University College of Engineering  58.25   \n",
+       "72    IR-E-C-1262                      B M S  College of Engineering  62.07   \n",
+       "181   IR-E-U-0455  Indian Institute of Information Technology  De...  35.51   \n",
        "\n",
-       "       rpc     go     oi  perception         city             state  rank  \n",
-       "23   34.55  55.15  57.90       38.26  Gandhinagar           Gujarat    24  \n",
-       "117   8.03  49.36  57.20        5.21       Guntur    Andhra Pradesh   118  \n",
-       "177  14.19  38.55  44.77        5.69       Cochin            Kerala   178  \n",
-       "111  22.22  46.02  47.26        0.00        Solan  Himachal Pradesh   112  \n",
-       "98    3.35  65.40  66.06        6.18         Pune       Maharashtra    99  \n",
-       "110  10.86  68.33  49.81        7.12  Gandhinagar           Gujarat   111  "
+       "       rpc     go     oi  perception       city           state  rank  \n",
+       "52   26.19  56.17  59.29        8.05    Jodhpur       Rajasthan    53  \n",
+       "192   2.29  59.12  36.87        2.69     Nadiad         Gujarat   193  \n",
+       "26   45.19  69.73  53.77       15.56     Nagpur     Maharashtra    27  \n",
+       "96   10.41  59.54  50.97        1.63   Kakinada  Andhra Pradesh    97  \n",
+       "72   11.92  55.53  52.58       17.79  Bengaluru       Karnataka    73  \n",
+       "181   7.80  57.62  53.05       18.15    Chennai      Tamil Nadu   182  "
       ]
      },
      "execution_count": 2,
@@ -420,7 +420,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Omkar Khade\\AppData\\Local\\Temp\\ipykernel_12992\\1134722465.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "C:\\Users\\Omkar Khade\\AppData\\Local\\Temp\\ipykernel_9068\\1134722465.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  df.corr()\n"
      ]
     },
@@ -541,7 +541,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Omkar Khade\\AppData\\Local\\Temp\\ipykernel_12992\\1076813670.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "C:\\Users\\Omkar Khade\\AppData\\Local\\Temp\\ipykernel_9068\\1076813670.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  df.corr()['rank']\n"
      ]
     },
@@ -603,58 +603,58 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>70.58</td>\n",
-       "      <td>45.83</td>\n",
-       "      <td>56.57</td>\n",
-       "      <td>40.89</td>\n",
-       "      <td>10.70</td>\n",
-       "      <td>39</td>\n",
+       "      <th>149</th>\n",
+       "      <td>53.05</td>\n",
+       "      <td>6.12</td>\n",
+       "      <td>52.87</td>\n",
+       "      <td>46.82</td>\n",
+       "      <td>5.21</td>\n",
+       "      <td>150</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>68.93</td>\n",
-       "      <td>46.03</td>\n",
-       "      <td>78.67</td>\n",
-       "      <td>55.24</td>\n",
-       "      <td>55.59</td>\n",
-       "      <td>13</td>\n",
+       "      <th>163</th>\n",
+       "      <td>57.13</td>\n",
+       "      <td>2.86</td>\n",
+       "      <td>49.94</td>\n",
+       "      <td>45.99</td>\n",
+       "      <td>2.16</td>\n",
+       "      <td>164</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>54.76</td>\n",
-       "      <td>36.98</td>\n",
-       "      <td>64.42</td>\n",
-       "      <td>50.22</td>\n",
-       "      <td>29.68</td>\n",
-       "      <td>47</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>82</th>\n",
-       "      <td>62.69</td>\n",
-       "      <td>4.26</td>\n",
-       "      <td>63.05</td>\n",
-       "      <td>48.54</td>\n",
-       "      <td>12.79</td>\n",
-       "      <td>83</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>120</th>\n",
-       "      <td>53.96</td>\n",
-       "      <td>3.72</td>\n",
-       "      <td>59.10</td>\n",
-       "      <td>64.06</td>\n",
-       "      <td>1.10</td>\n",
-       "      <td>121</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>138</th>\n",
-       "      <td>46.65</td>\n",
-       "      <td>9.68</td>\n",
-       "      <td>61.00</td>\n",
-       "      <td>49.25</td>\n",
+       "      <th>196</th>\n",
+       "      <td>46.11</td>\n",
+       "      <td>7.36</td>\n",
+       "      <td>50.73</td>\n",
+       "      <td>48.76</td>\n",
        "      <td>0.55</td>\n",
-       "      <td>139</td>\n",
+       "      <td>197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>69.35</td>\n",
+       "      <td>19.73</td>\n",
+       "      <td>52.14</td>\n",
+       "      <td>48.69</td>\n",
+       "      <td>51.77</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193</th>\n",
+       "      <td>41.95</td>\n",
+       "      <td>12.14</td>\n",
+       "      <td>53.25</td>\n",
+       "      <td>43.08</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143</th>\n",
+       "      <td>41.84</td>\n",
+       "      <td>24.72</td>\n",
+       "      <td>48.59</td>\n",
+       "      <td>39.99</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>144</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -662,12 +662,12 @@
       ],
       "text/plain": [
        "       tlr    rpc     go     oi  perception  rank\n",
-       "38   70.58  45.83  56.57  40.89       10.70    39\n",
-       "12   68.93  46.03  78.67  55.24       55.59    13\n",
-       "46   54.76  36.98  64.42  50.22       29.68    47\n",
-       "82   62.69   4.26  63.05  48.54       12.79    83\n",
-       "120  53.96   3.72  59.10  64.06        1.10   121\n",
-       "138  46.65   9.68  61.00  49.25        0.55   139"
+       "149  53.05   6.12  52.87  46.82        5.21   150\n",
+       "163  57.13   2.86  49.94  45.99        2.16   164\n",
+       "196  46.11   7.36  50.73  48.76        0.55   197\n",
+       "48   69.35  19.73  52.14  48.69       51.77    49\n",
+       "193  41.95  12.14  53.25  43.08        0.55   194\n",
+       "143  41.84  24.72  48.59  39.99        0.00   144"
       ]
      },
      "execution_count": 10,
@@ -877,7 +877,7 @@
     {
      "data": {
       "text/plain": [
-       "0.931538904417223"
+       "0.9322706585949105"
       ]
      },
      "execution_count": 20,
@@ -909,8 +909,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE =  239.49809249999998\n",
-      "RMSE =  15.475725911891823\n"
+      "MSE =  236.93819\n",
+      "RMSE =  15.392796691959521\n"
      ]
     }
    ],
@@ -926,7 +926,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
+   "id": "a3a287fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9229691852648199"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# cross validation using cross_val_score\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "cross_val_score(regressorRFR, X_train, y_train, cv=5, ).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "6e49c043",
    "metadata": {},
    "outputs": [
@@ -941,10 +964,10 @@
     {
      "data": {
       "text/plain": [
-       "120"
+       "119"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "id": "4eede694",
    "metadata": {},
    "outputs": [
@@ -965,7 +988,7 @@
        "129"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,21 +1008,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "id": "d66061dd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['college_rank_predictor.pkl']"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import joblib\n",
     "#joblib.dump(regressorRFR, \"college_rank_predictor.pkl\")"
@@ -1007,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "id": "2d4f519c",
    "metadata": {},
    "outputs": [],
@@ -1017,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "id": "f7f935d8",
    "metadata": {},
    "outputs": [
@@ -1035,7 +1047,7 @@
        "120.02"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
